fix: roles e appsettings

--- a/src/PAIFGAMES.FCG.Api/appsettings.json
+++ b/src/PAIFGAMES.FCG.Api/appsettings.json
@@ -15,7 +15,7 @@
     "RefreshTokenType": "1"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost,1433;Database=PaifGames;User Id=sa;Password=SAP@ssw0rd;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=sqlserver,1433;Database=PaifGames;User Id=sa;Password=SAP@ssw0rd;TrustServerCertificate=True;"
   },
   "AdminApiKey": "44e61eab-b85a-455f-84b3-aa4acbc648e1"
 }
